2008-11-30  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl (format, ParseClockScanFormat): Added a
	[string map] to get rid of namespace delimiters before caching a
	scan or format procedure [Bug 2362156].
	* tests/clock.test (clock-64.[12]): Added test cases for the bug
	that was tickled by a namespace delimiter inside a format string.
	
	
2008-11-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied Alexandre
	  Ferrieux's patch for [Bug 2270477] to prevent infinite looping
	  during finalization of channels not bound to interpreters.

2008-08-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: Backport of fix for [Bug 2333466].

2008-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls:   Fix signature and implementation of
	* generic/tclDecls.h:  Tcl_HashStats, such that it conforms
	* generic/tclHash.c:   to the documentation.
	* doc/Hash.3:          [Bug 2308236]

2008-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h:     rename static function FSUnloadTempFile to
	* generic/tclIOUtil.c   TclFSUnloadTempFile, needed in tclLoad.c

	* generic/tclLoad.c     Fixed [Bug 2269431]: load of shared
	                        objects leaves temporary files on windows

2008-11-10  Andreas Kupries  <andreask@activestate.com>

	* doc/platform_shell.n: Fixed [Bug 2255235], reported by Ulrich
	* library/platform/pkgIndex.tcl: Ring <uring@users.sourceforge.net>.
	* library/platform/shell.tcl: Updated the LOCATE command in the
	* library/tm.tcl: package 'platform::shell' to handle the new form
	* unix/Makefile.in: of 'provide' commands generated by tm.tcl. Bumped
	* win/Makefile.in: package to version 1.1.4. Added cross-references
	to the relevant parts of the code to avoid future desynchronization.

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclPort.h: remove the ../win/ header dir as the build
	system already has it, and it confuses builds when used with